fix cropper style

--- a/resources/styles/spiral/vault/sstyle.scss
+++ b/resources/styles/spiral/vault/sstyle.scss
@@ -794,7 +794,8 @@ textarea {
   }
 }
 
-.sf-crop-modal button.btn {
+.sf-crop-modal button.btn,
+.sf-crop-modal button.btn.sf-crop-save {
   box-shadow: none;
   font-weight: bold;
   padding: 0;
